--- a/style.css
+++ b/style.css
@@ -10,3 +10,66 @@ body {
 }
 
 /* Add styles here! */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-size: 1.25rem;
+}
+
+header {
+  padding: 96px 0 64px;
+  margin: 0 auto;
+  letter-spacing: -0.005em;
+}
+
+p strong {
+  color: hsl(160deg 100% 30%);
+}
+
+main {
+  background-color: hsl(0 0% 40%);
+  border-top: 8px solid hsl(0 0% 60%);
+  padding: 64px 0;
+}
+
+p {
+  line-height: 1.5;
+  margin-bottom: 16px;
+}
+
+p + p {
+  margin-bottom: 0;
+}
+
+.title {
+  font-size: 2rem;
+  margin-bottom: 48px;
+}
+
+.max-width-wrapper {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.intro-chunk {
+  padding: 24px;
+}
+
+.indented-heading {
+  display: inline-block;
+  font-size: 1.5rem;
+  padding: 16px 32px;
+  margin-left: -32px;
+  margin-bottom: 16px;
+  background-color: hsl(45deg 100% 50%);
+  border-bottom: 8px solid hsl(45deg 100% 40%);
+}
+
+.card {
+  background-color: hsl(0 0% 100%);
+  border-bottom: 8px solid hsl(0 0% 60%);
+  padding: 8px 24px 24px;
+}
